# jarvis

./: .gitignore  00_prueba.py  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md
brain.example/: README.md
jarvis/: .env.example  .gitignore  Dockerfile  JARVIS.md  README.md  __main__.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh
jarvis/aura/: __init__.py  index.html  server.py
jarvis/core/: adversary_emulator.py  agent_orchestrator.py  agent_planner.py  agent_runtime.py  agentic_loop.py  ai_reverser.py  alias_registry.py  amsi_bridge.py  ares_campaigns.yaml  arp_deception.py  asset_discovery.py  asset_graph.py  assistant_state.py  attck_coverage.py  audio.py  audio_vad.py  aura_events.py  authority.py  auto_remediator.py  barge_in.py  boot_sequence.py  boot_state.py  c2_dashboard.py  canary.py  cancel_bus.py  capabilities.py  causal_timeline.py  chroma_collections.py  cisco_controller.py  clipboard_monitor.py  cmd_analyser.py  code_intel.py  cognitive_engine.py  cognitive_optimizer.py  cognitive_synthesis.py  cognitive_types.py  collector_fabric.py  compaction_quality.py  compaction_scheduler.py  config.py  (+196 more)
jarvis/core/playbooks/: c2_beacon.yaml  credential_harvesting.yaml  lateral_movement.yaml  process_injection.yaml
jarvis/core/signatures/: evasion.yar  exfil.yar  injection.yar  persistence.yar  threatfeed_dynamic.yar
jarvis/docs/: V67_ARCHITECTURE_MAP.md  V67_FIELD_OPERATIONS.md  V68_1_LIVE_RUNTIME_STABILIZATION.md  V68_COGNITIVE_COMMAND_CENTER.md  V69_M52_EMBEDDING_RUNTIME.md  V69_M53_SEMANTIC_CONTINUITY.md  V69_M54_1_RUNTIME_BACKPRESSURE_FIRST_TURN.md  V69_M54_INTERACTIVE_RUNTIME_COHERENCE.md  V69_M55_1_DISPATCH_SERVICE_LIFECYCLE.md  V69_M55_NATIVE_FAST_PATH.md  V69_M56_VERIFIED_RESIDENCY_WARMUP.md  V69_M57_ADAPTIVE_STREAMING_RESPONSE.md  V69_M58_PROMPT_PREFIX_PARITY.md  V69_M59_PREDICTIVE_WARMTH_RUNTIME_QUALIFICATION.md
jarvis/evals/: README.md
jarvis/evals/prompt_injection/: injection_resistance.jsonl
jarvis/evals/sql_injection/: sqli.jsonl
jarvis/logs/: tactic_audit.jsonl
jarvis/plugins/: threat_escalator.example.py
jarvis/requirements/: all.txt  base.txt  dev.txt  docs.txt  lab.txt  soc.txt  voice.txt
jarvis/scripts/: bench_prefix_m58.py  bench_response_m57.py  doctor.py  field_readiness.py  ingest_docs.py  install.ps1  install.sh  model_doctor.py  qualify_release_m59.py  qualify_runtime_m59.py  scenario_runner.py  soak_prefix_m58.py
jarvis/tests/: conftest.py  test_agent_planner.py  test_agent_runtime.py  test_alias_registry_v69.py  test_asset_graph.py  test_assistant_state.py  test_aura_cognitive_panels_v68.py  test_aura_origin.py  test_aura_token_approval.py  test_authority.py  test_barge_in_v69_m575.py  test_barge_in_v69_m588.py  test_bind_and_dedup_v681.py  test_boot_state_v681.py  test_capabilities.py  test_causal_timeline_v68.py  test_chroma_collections_v69.py  test_cisco_controller.py  test_code_execute_gate.py  test_cognitive_synthesis_v68.py  test_collector_fabric_v67.py  test_command_center_v67.py  test_compaction_quality_v69_m594.py  test_compaction_scheduler_v69_m586.py  test_consent_commands.py  test_consent_gating.py  test_consent_wiring.py  test_console_v69.py  test_context_composer_v69_m576.py  test_continuation_quality_v69_m577.py  test_contract_family_v69_m584.py  test_correlation_v2.py  test_critic.py  test_cyber_intent_v681.py  test_dataset_pipeline.py  test_db_manager.py  test_decision_support_v68.py  test_deterministic_bypass_v69_m55.py  test_diagnostics_v661.py  test_digital_twin.py  (+121 more)
jarvis/tools/: active_tarpit.py  ad_graph_analyzer.py  binary_inverter.py  breach_simulator.py  browser_intel.py  deception_orchestrator.py  diagram_generator.py  docker_labs.yaml  docker_manager.py  ebpf_bridge.py  environmental_intel.py  etw_monitor.py  executor.py  forensic_volatility.py  forensics.py  geo_resolver.py  ghost_hands.py  injection_classifier.py  ioc_extractor.py  lab_profiles.yaml  memory_hunter.py  mesh_generator.py  offensive_rpc.py  osint_engine.py  resource_sentinel.py  rf_bridge.py  rf_oob.py  schematic_compiler.py  sliver_bridge.py  sysmon_bridge.py  threat_feed_sync.py  vmware_triage_runner.py  yara_file_monitor.py  zeek_dpi.py
jarvis/training/: .gitignore  README.md
(+17 files in other folders)
