[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "63.0.0"
description = "Local-first, Ollama-powered AI workstation: voice agent, SOC/DFIR automation, and a guarded tool executor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Alejandro" }]
keywords = ["ollama", "local-llm", "soc", "dfir", "voice-assistant", "security"]

# Core text-mode dependencies. Heavier capabilities are optional extras below
# and are also maintained as installable profiles under requirements/.
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "duckduckgo-search>=6.0",
    "dnspython>=2.6.0",
    "python-whois>=0.9.0",
    "psutil>=5.9.8",
    "schedule>=1.2.0",
    "PyYAML>=6.0.1",
    "aiohttp>=3.9.3",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
voice = ["sounddevice>=0.4.6", "soundfile>=0.12.1", "numpy>=1.24.0", "faster-whisper>=1.0.0", "pyttsx3>=2.90", "webrtcvad>=2.0.10", "pyaudio>=0.2.14"]
docs = ["pdfplumber>=0.10.0", "python-docx>=1.1.0", "openpyxl>=3.1.0", "pandas>=2.0.0", "python-pptx>=0.6.23", "Pillow>=10.0.0", "pytesseract>=0.3.10", "easyocr>=1.7.1", "striprtf>=0.0.26", "markdown>=3.5.0"]
soc = ["yara-python>=4.5.0", "scapy>=2.5.0", "paramiko>=3.4.0", "pefile>=2023.2.7", "capstone>=5.0.1", "scipy>=1.12.0", "feedparser>=6.0.12", "cryptography>=42.0.0", "watchdog>=4.0.0", "networkx>=3.2.0", "asyncssh>=2.14.0", "netmiko>=4.3.0", "asyncpg>=0.29.0", "redis>=5.0.0"]
lab = ["docker>=7.0.0", "opencv-python>=4.9.0", "mitmproxy>=10.3.0", "playwright>=1.40.0", "shodan>=1.31.0", "gitpython>=3.1.40", "nvdlib>=0.7.5", "pyautogui>=0.9.54", "mss>=9.0.1", "keyboard>=0.13.5", "pyperclip>=1.8.2"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "bandit>=1.7.0", "pip-audit>=2.7.0"]

[project.scripts]
jarvis = "main:main"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Gate: syntax errors (E9) + the full pyflakes ruleset (F) — real correctness
# issues (unused imports/vars, undefined names, bad f-strings, redefinitions).
# CI fails on these (no `|| true`). The broader pycodestyle style set (E/W,
# excluding E501) is a separate cleanup tracked in CHANGELOG.md.
select = ["E9", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Code-generation template: __JARVIS_PORT__ is string-substituted at runtime by
# sensor_mesh._generate_agent_script, so it is intentionally undefined here.
"**/sensor_agent_template.py" = ["F821"]
# Self-test probes import optional deps purely to confirm availability
# (`try: import yara` → report present/absent). The bound name is intentionally
# unused; removing the import would make every probe report success. F401 here
# is a proven false positive for that pattern.
"**/self_test.py" = ["F401"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = [".", "brain/docs/intrusion-detection-system"]
# Both test trees run by default: the app suite (jarvis/tests) and the
# repo-level suite (../tests), which holds the FORCE_OVERRIDE + SSRF executor
# hardening regression tests (test_security_hardening.py). The repo-level suite
# was previously not collected, so those security guardrail tests never ran in
# the default `pytest` invocation.
testpaths = ["tests", "../tests"]
markers = [
    "slow: long-running tests",
    "windows: requires a Windows host",
    "integration: exercises multiple subsystems together",
    "requires_audio: needs a microphone / audio backend",
    "requires_ollama: needs a running Ollama server",
    "requires_docker: needs a Docker daemon",
    "requires_redis: needs a Redis server",
    "requires_postgres: needs a PostgreSQL server",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
